# waves

./: LICENSE  README.md  pyproject.toml  standing_wave.py
app/: standing_wave_app.py
