[tool.poetry]
name = "waves"
version = "1.0.0"
description = "Fun with trigonometry inspired by standing waves and Chladni plates."
authors = ["David Zakarias <david.zakarias@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.2"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
